discussion/kv_engine/179400/179400_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53052: Update frequencies for all Buckets when unified caching

Change-Id: Ib4554e41206f2c9c6b5f45362c32a54277b54564

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-08-31 21:39:02.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-31 23:20:49.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19904/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/server_api.cc:228:9: error: use of undeclared identifier "LOG_CRITICAL_RAW" [clang-diagnostic-error]
        LOG_CRITICAL_RAW("server api freq sat");
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:1449:9: error: use of undeclared identifier "EP_LOG_CRITICAL_RAW" [clang-diagnostic-error]
        EP_LOG_CRITICAL_RAW("ht saturated");
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_cluster/unified_caching_test.cc:59:14: error: no member named "this_thread" in namespace "std" [clang-diagnostic-error]
        std::this_thread::sleep_for(std::chrono::milliseconds(100));
             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19904/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/server_api.cc:228:9:
error: use of undeclared identifier "LOG_CRITICAL_RAW" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19904/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48835/ : FAILURE

Failure of GoogleTest "SingleThreadedCheckpointTest.CursorDistance_Deduplication":

<pre>
[ RUN      ] SingleThreadedCheckpointTest.CursorDistance_Deduplication
2022-08-31T14:52:32.745926-07:00 CRITICAL (SynchronousEPEngine:default) ht saturated
2022-08-31T14:52:32.745985-07:00 CRITICAL (SynchronousEPEngine:default) test
2022-08-31T14:52:32.745995-07:00 CRITICAL (SynchronousEPEngine:default) KVBucket::itemFrequencyCounterSaturated
2022-08-31T14:52:32.746000-07:00 CRITICAL (SynchronousEPEngine:default) waking item freq decayer
unknown file: error: SEH exception with code 0xc0000005 thrown in the test body.
[  FAILED  ] SingleThreadedCheckpointTest.CursorDistance_Deduplication (6 ms)
SingleThreadedCheckpointTest.CursorDistance_Deduplication
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48835/ )

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...2022-08-31T14:53:37.746409-07:00 CRITICAL (default) freq decaying
Unexpected stat: ep_unified_caching from stat group 
Unexpected stat: ep_unified_caching from stat group config
..\kv_engine\engines\ep\tests\ep_testsuite.cc:7820 Test failed: `stats error" (missing stats)
(26 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48835/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41056/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/hash_table.cc:1449:9:
error: use of undeclared identifier "EP_LOG_CRITICAL_RAW"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41056/ )

CMake error: CMakeLists.txt:166 (MESSAGE) ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41056/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21858/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...2022-08-31T21:45:07.784192+00:00 CRITICAL (default) freq decaying
[2022-08-31T21:45:09.795Z] Unexpected stat: ep_unified_caching from stat group 
[2022-08-31T21:45:09.795Z] Unexpected stat: ep_unified_caching from stat group config
[2022-08-31T21:45:09.795Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7820 Test failed: `stats error" (missing stats)
[2022-08-31T21:45:09.795Z] (62 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21858/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar. under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21858/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22210/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...2022-08-31T21:45:36.388246+00:00 CRITICAL (default) freq decaying
[2022-08-31T21:45:37.126Z] Unexpected stat: ep_unified_caching from stat group 
[2022-08-31T21:45:37.126Z] Unexpected stat: ep_unified_caching from stat group config
[2022-08-31T21:45:37.126Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7820 Test failed: `stats error" (missing stats)
[2022-08-31T21:45:37.126Z] (28 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22210/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22210/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22951/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...2022-08-31T21:47:01.713900+00:00 CRITICAL (default) freq decaying
[2022-08-31T21:47:14.751Z] Unexpected stat: ep_unified_caching from stat group 
[2022-08-31T21:47:14.751Z] Unexpected stat: ep_unified_caching from stat group config
[2022-08-31T21:47:14.751Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7820 Test failed: `stats error" (missing stats)
[2022-08-31T21:47:14.751Z] (824 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22951/ )

ThreadSanitizer issue: data race /usr/bin/../lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/chrono:553 in bool std::chrono::operator==<long, std::ratio<1l, 1l>, long, std::ratio<1l, 1l> >(std::chrono::duration<long, std::ratio<1l, 1l> > const&, std::chrono::duration<long, std::ratio<1l, 1l> > const&)  ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22951/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21151/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...2022-08-31T22:51:26.913834+01:00 CRITICAL (default) freq decaying
[2022-08-31T21:51:29.100Z] Unexpected stat: ep_unified_caching from stat group 
[2022-08-31T21:51:29.100Z] Unexpected stat: ep_unified_caching from stat group config
[2022-08-31T21:51:29.100Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/tests/ep_testsuite.cc:7820 Test failed: `stats error" (missing stats)
[2022-08-31T21:51:29.100Z] (44 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21151/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30239/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...2022-08-31T21:43:26.632221+00:00 CRITICAL (default) freq decaying
[2022-08-31T21:43:28.965Z] Unexpected stat: ep_unified_caching from stat group 
[2022-08-31T21:43:28.965Z] Unexpected stat: ep_unified_caching from stat group config
[2022-08-31T21:43:28.965Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7820 Test failed: `stats error" (missing stats)
[2022-08-31T21:43:28.965Z] (130 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30239/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30239/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9699/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...2022-08-31T14:51:16.543810-07:00 CRITICAL (default) freq decaying
[2022-08-31T21:51:17.804Z] Unexpected stat: ep_unified_caching from stat group 
[2022-08-31T21:51:17.804Z] Unexpected stat: ep_unified_caching from stat group config
[2022-08-31T21:51:17.805Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7820 Test failed: `stats error" (missing stats)
[2022-08-31T21:51:17.805Z] (16 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9699/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19125/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9600/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
